# serializer version: 1
# name: TestHelpSnapshots.test_root_help
  '''
  usage: siftd [-h] [--version] [--db PATH]
               {register,session-id,config,adapters,db,tag,tools,query,ingest,backfill,migrate,copy,doctor,search,install,peek,export,serve} ...
  
  Aggregate and query LLM conversation logs
  
  positional arguments:
    {register,session-id,config,adapters,db,tag,tools,query,ingest,backfill,migrate,copy,doctor,search,install,peek,export,serve}
      register            Register an active session for live tagging
      session-id          Print the session ID for the current workspace
      config              View or modify config settings
      adapters            List discovered adapters
      db                  Database operations (info, backup, restore, vacuum,
                          slice, merge, send, receive, remote, push, pull)
      tag                 Manage tags: apply, remove, list, rename, delete
      tools               Summarize tool usage by category
      query               List and filter conversations by metadata
      ingest              Ingest logs from all sources
      backfill            Backfill derived data from existing records
      migrate             Run data migrations
      copy                Copy built-in resources for customization
      doctor              Run health checks and maintenance
      search              Search conversations (auto-selects FTS5 or semantic
                          based on what's installed)
      install             Install optional dependencies or bundled components
      peek                Inspect live sessions from disk (bypasses SQLite)
      export              Export conversations for PR review workflows
      serve               Start the HTTP team sync server
  
  options:
    -h, --help            show this help message and exit
    --version             show program's version number and exit
    --db PATH             Database path (default:
                          ~/.local/share/siftd/siftd.db)
  
  '''
# ---
# name: TestHelpSnapshots.test_subcommand_help[adapters]
  '''
  usage: siftd adapters [-h] [--json]
  
  options:
    -h, --help  show this help message and exit
    --json      Output as JSON
  
  '''
# ---
# name: TestHelpSnapshots.test_subcommand_help[backfill]
  '''
  usage: siftd backfill [-h] [--shell-tags] [--derivative-tags]
                        [--filter-binary] [--dry-run]
  
  options:
    -h, --help         show this help message and exit
    --shell-tags       Tag shell.execute calls with shell:* categories
    --derivative-tags  Tag conversations containing siftd search/query as
                       siftd:derivative
    --filter-binary    Filter binary content (images, base64) from existing
                       blobs
    --dry-run          Preview changes without applying (use with --filter-
                       binary)
  
  examples:
    siftd backfill                    # backfill response attributes (cache tokens)
    siftd backfill --shell-tags       # categorize shell commands as shell:git, shell:test, etc.
    siftd backfill --derivative-tags  # mark siftd-generated conversations
    siftd backfill --filter-binary    # filter binary content from existing blobs
    siftd backfill --filter-binary --dry-run  # preview what would be filtered
  
  '''
# ---
# name: TestHelpSnapshots.test_subcommand_help[config]
  '''
  usage: siftd config [-h] [{get,set,path,append,remove}] [key] [value]
  
  positional arguments:
    {get,set,path,append,remove}
                          Action to perform
    key                   Config key (dotted path, e.g., search.formatter)
    value                 Value to use (for 'set', 'append', 'remove')
  
  options:
    -h, --help            show this help message and exit
  
  examples:
    siftd config                        # show all config
    siftd config path                   # show config file path
    siftd config get search.formatter      # get specific value
    siftd config set search.formatter verbose  # set value
    siftd config append adapters.claude_code.locations ~/.claude/projects
    siftd config remove adapters.claude_code.locations ~/.claude/projects
  
  '''
# ---
# name: TestHelpSnapshots.test_subcommand_help[copy]
  '''
  usage: siftd copy [-h] [--all] [--force] {adapter,query} [name]
  
  positional arguments:
    {adapter,query}  Resource type to copy
    name             Resource name
  
  options:
    -h, --help       show this help message and exit
    --all            Copy all resources of this type
    --force          Overwrite existing files
  
  examples:
    siftd copy adapter claude_code    # copy adapter to ~/.config/siftd/adapters/
    siftd copy adapter --all          # copy all built-in adapters
    siftd copy query cost             # copy query to ~/.config/siftd/queries/
  
  '''
# ---
# name: TestHelpSnapshots.test_subcommand_help[doctor]
  '''
  usage: siftd doctor [-h] [--json] [--strict] [--pending-tags] [subcommand ...]
  
  positional arguments:
    subcommand      list | run [checks...] | fix | <check-name>
  
  options:
    -h, --help      show this help message and exit
    --json          Output as JSON
    --strict        Exit 1 on warnings (not just errors). Useful for CI.
    --pending-tags  Clean up stale sessions and orphaned pending tags (use with
                    'fix')
  
  examples:
    siftd doctor                          # run all checks
    siftd doctor list                     # list available checks
    siftd doctor run                      # run all checks (explicit)
    siftd doctor run ingest-pending       # run specific check
    siftd doctor run check1 check2        # run multiple checks
    siftd doctor fix                      # show fix commands for issues
    siftd doctor fix --pending-tags       # clean up stale sessions/tags
    siftd doctor --json                   # output as JSON
    siftd doctor --strict                 # exit 1 on warnings (for CI)
  
  legacy (still supported):
    siftd doctor checks                   # same as 'list'
    siftd doctor fixes                    # same as 'fix'
    siftd doctor ingest-pending           # same as 'run ingest-pending'
  
  exit codes:
    0  no errors (or no warnings with --strict)
    1  errors found (or warnings with --strict)
  
  '''
# ---
# name: TestHelpSnapshots.test_subcommand_help[export]
  '''
  usage: siftd export [-h] [-n [N]] [-w SUBSTR] [--since DATE] [--before DATE]
                      [-l NAME] [--no-tag NAME] [-s QUERY]
                      [-f {prompts,exchanges,json}] [--prompts-only]
                      [--no-header] [-o FILE]
                      [conversation_id]
  
  positional arguments:
    conversation_id       Conversation ID to export (prefix match)
  
  options:
    -h, --help            show this help message and exit
    -n, --last [N]        Export N most recent sessions (default: 1 if no ID
                          given)
    -f, --format {prompts,exchanges,json}
                          Output format: prompts (default), exchanges, json
    --prompts-only        Omit response text and tool calls
    --no-header           Omit session metadata header
    -o, --output FILE     Write to file instead of stdout
  
  filtering:
    -w, --workspace SUBSTR
                          Filter by workspace path substring
    --since DATE          Conversations started after this date (YYYY-MM-DD, 7d,
                          1w, yesterday, today)
    --before DATE         Conversations started before this date (YYYY-MM-DD,
                          7d, 1w, yesterday, today)
    -s, --search QUERY    Full-text search filter
  
  tag filtering:
    -l, --tag NAME        Filter by tag (repeatable, OR logic)
    --no-tag NAME         Exclude conversations with this tag (NOT logic)
  
  examples:
    siftd export --last                   # export most recent session (prompts)
    siftd export --last 3                 # export last 3 sessions
    siftd export 01HX4G7K                 # export specific session (prefix match)
    siftd export -w myproject --since 2024-01-01  # filter by workspace and date
    siftd export -l decision:auth         # export tagged conversations
    siftd export --last --format json     # structured JSON output
    siftd export --last --format exchanges  # include response summaries
    siftd export --last --prompts-only    # omit tool call details
    siftd export --last --no-tag private  # exclude private sessions
    siftd export --last -o context.md     # write to file
  
  '''
# ---
# name: TestHelpSnapshots.test_subcommand_help[ingest]
  '''
  usage: siftd ingest [-h] [-q | -v] [-p DIR] [-a NAME] [--json] [--rebuild-fts]
  
  options:
    -h, --help          show this help message and exit
    -q, --quiet         Only show totals line
    -v, --verbose       Show per-adapter skip breakdowns
    -p, --path DIR      Additional directories to scan (can be repeated)
    -a, --adapter NAME  Only run specific adapter(s) (can be repeated)
    --json              Output newline-delimited JSON events
    --rebuild-fts       Rebuild FTS index from existing data (skips ingestion)
  
  examples:
    siftd ingest                      # ingest from all adapters
    siftd ingest -q                   # quiet: totals line only
    siftd ingest -v                   # verbose: per-adapter skip breakdowns
    siftd ingest -a claude_code       # only run claude_code adapter
    siftd ingest -p ~/logs -p /tmp    # scan additional directories
    siftd ingest --rebuild-fts        # rebuild FTS index from scratch
  
  '''
# ---
# name: TestHelpSnapshots.test_subcommand_help[install]
  '''
  usage: siftd install [-h] [--dry-run] [--scope {user,project}]
                       {embed,serve,plugin}
  
  positional arguments:
    {embed,serve,plugin}  Component to install (embed: semantic search, serve:
                          HTTP server, plugin: Claude Code plugin)
  
  options:
    -h, --help            show this help message and exit
    --dry-run             Show what would be run without executing
    --scope {user,project}
                          Plugin install scope: user (~/.claude/plugins/) or
                          project (.claude/plugins/)
  
  examples:
    siftd install embed             # install semantic search dependencies
    siftd install serve             # install HTTP server dependencies
    siftd install embed --dry-run   # show what would be installed
    siftd install plugin            # install Claude Code plugin (user scope)
    siftd install plugin --scope project  # install for current project only
  
  '''
# ---
# name: TestHelpSnapshots.test_subcommand_help[path]
  ''
# ---
# name: TestHelpSnapshots.test_subcommand_help[peek]
  '''
  usage: siftd peek [-h] [-w SUBSTR] [--branch SUBSTR] [--all] [-n N]
                    [--exchanges N] [--full] [--chars N] [-f] [--tail]
                    [--tail-lines N] [--json] [--main-only] [--children ID]
                    [--last-response] [--last-prompt]
                    [session_id]
  
  positional arguments:
    session_id            Session ID prefix for detail view
  
  options:
    -h, --help            show this help message and exit
    -w, --workspace SUBSTR
                          Filter by workspace name substring
    --branch SUBSTR       Filter by worktree branch substring
    --all                 Include inactive sessions (not just last 2 hours)
    -n, --limit N         Maximum number of sessions to list (default: 10)
    --exchanges N         Detail mode: number of exchanges to show (default: 5)
    --full                Show full text (no truncation)
    --chars N             Truncate text at N characters (default: 200)
    -f, --follow          Follow a live session in real time (like tail -f)
    --tail                Raw JSONL tail (last 20 records)
    --tail-lines N        Number of records for --tail (default: 20)
    --json                Output as structured JSON
    --main-only           Only show main sessions (exclude subagents)
    --children ID         Show only children of the specified parent session
    --last-response       Output only the last assistant response (raw text, no
                          formatting)
    --last-prompt         Output only the last user prompt (raw text, no
                          formatting)
  
  examples:
    siftd peek                    # list latest 10 sessions
    siftd peek -n 5               # list latest 5 sessions
    siftd peek --all              # list all sessions (no time limit)
    siftd peek --all -n 50        # list all, but only first 50
    siftd peek -w myproject       # filter by workspace name
    siftd peek c520f862           # detail view for session (last 5 exchanges)
    siftd peek c520 --exchanges 10  # show last 10 exchanges
    siftd peek c520 --full        # show full text (no truncation)
    siftd peek c520 --tail        # raw JSONL tail
    siftd peek c520 --tail --json # tail as JSON array
    siftd peek --main-only        # exclude subagent sessions
    siftd peek --children abc123  # show children of parent session
    siftd peek --last-response    # output last assistant response (raw text)
    siftd peek --last-prompt      # output last user prompt (raw text)
    siftd peek c520 --last-response  # last response from specific session
    siftd peek c520 --follow      # follow a live session in real time
    siftd peek --follow            # follow most recent active session
    siftd peek --follow --json    # follow as NDJSON (one object per line)
  
  NOTE: Session content may contain sensitive information (API keys, credentials, etc.).
  
  '''
# ---
# name: TestHelpSnapshots.test_subcommand_help[query]
  '''
  usage: siftd query [-h] [-w SUBSTR] [-m NAME] [--since DATE] [--before DATE]
                     [-l NAME] [--all-tags NAME] [--no-tag NAME] [-t NAME]
                     [--tool-tag NAME] [-n LIMIT] [-v] [--oldest] [--json]
                     [--stats] [--exchanges N] [--brief] [--summary] [--full]
                     [--chars N] [--thinking] [--tools [FILTER]]
                     [--tool-chars N] [--var KEY=VALUE]
                     [conversation_id] [sql_name]
  
  positional arguments:
    conversation_id       Conversation ID for detail view, or 'sql' for SQL
                          query mode
    sql_name              SQL query name (when using 'sql' subcommand)
  
  options:
    -h, --help            show this help message and exit
  
  filtering:
    -w, --workspace SUBSTR
                          Filter by workspace path substring
    -m, --model NAME      Filter by model name
    --since DATE          Conversations started after this date (YYYY-MM-DD, 7d,
                          1w, yesterday, today)
    --before DATE         Conversations started before this date (YYYY-MM-DD,
                          7d, 1w, yesterday, today)
    -t, --tool NAME       Filter by canonical tool name (e.g. shell.execute)
  
  tag filtering:
    -l, --tag NAME        Filter by tag (repeatable, OR logic)
    --all-tags NAME       Require all specified tags (AND logic)
    --no-tag NAME         Exclude conversations with this tag (NOT logic)
    --tool-tag NAME       Filter by tool call tag (e.g. shell:test)
  
  output:
    -n, --limit LIMIT     Number of conversations to show (0=all, default: 10)
    -v, --verbose         Full table with all columns
    --oldest              Sort by oldest first (default: newest first)
    --json                Output as JSON array
    --stats               Show summary totals after list
  
  detail view:
    --exchanges N         Number of turns to show (default: all)
    --brief               Brief output (80 char truncation)
    --summary             Summary only (metadata, no turns)
    --full                Full text (no truncation)
    --chars N             Truncate text at N characters (default: 200)
    --thinking            Show model thinking/reasoning blocks
    --tools [FILTER]      Show tool inputs/results (optional filter: tool name
                          prefix or 'errors')
    --tool-chars N        Truncate tool input/result at N characters (default:
                          120)
  
  sql queries:
    --var KEY=VALUE       Substitute $KEY with VALUE in SQL
  
  List and filter conversations by metadata (workspace, model, date, tags).
  For semantic content search, use: siftd search <query>
  
  examples:
    siftd query                         # list recent conversations
    siftd query -n 20                   # list 20 conversations
    siftd query -w myproject            # filter by workspace
    siftd query -l research:auth        # conversations tagged research:auth
    siftd query -l research: -l useful: # OR — any research: or useful: tag
    siftd query --all-tags important --all-tags reviewed  # AND — must have both
    siftd query -l research: --no-tag archived            # combine OR + NOT
    siftd query --tool-tag shell:test   # conversations with test commands
    siftd query <id>                    # show conversation detail
    siftd query <id> --summary          # metadata only, no exchanges
    siftd query <id> --exchanges 5      # last 5 exchanges
    siftd query <id> --brief            # brief output (80 char truncation)
    siftd query <id> --full             # full text, no truncation
    siftd query sql                     # list available .sql files
    siftd query sql cost                # run the 'cost' query
    siftd query sql cost --var ws=proj  # run with variable substitution
  
  '''
# ---
# name: TestHelpSnapshots.test_subcommand_help[register]
  '''
  usage: siftd register [-h] --session ID --adapter NAME [--workspace PATH]
  
  options:
    -h, --help            show this help message and exit
    --session, -s ID      Harness session ID
    --adapter, -a NAME    Adapter name (e.g., claude_code)
    --workspace, -w PATH  Workspace path (default: current directory)
  
  examples:
    siftd register --session abc123 --adapter claude_code
    siftd register --session abc123 --adapter claude_code --workspace /path/to/project
  
  '''
# ---
# name: TestHelpSnapshots.test_subcommand_help[search]
  '''
  usage: siftd search [-h] [-w SUBSTR] [-m NAME] [--since DATE] [--before DATE]
                      [-l NAME] [--all-tags NAME] [--no-tag NAME] [-n LIMIT]
                      [-v] [--full] [--context N] [--thread] [--by-time]
                      [--json] [--format NAME] [--conversations] [--first]
                      [--refs [FILES]] [--fts] [--semantic] [--embeddings-only]
                      [--recall N] [--threshold SCORE] [--no-diversity]
                      [--lambda FLOAT] [--recency] [--recency-half-life DAYS]
                      [--recency-max-boost MULT] [--no-exclude-active]
                      [--include-derivative] [--index] [--rebuild]
                      [--backend NAME] [--embed-db PATH]
                      [query ...]
  
  positional arguments:
    query                 Natural language search query
  
  options:
    -h, --help            show this help message and exit
  
  filtering:
    -w, --workspace SUBSTR
                          Filter by workspace path substring
    -m, --model NAME      Filter by model name
    --since DATE          Conversations started after this date (YYYY-MM-DD, 7d,
                          1w, yesterday, today)
    --before DATE         Conversations started before this date (YYYY-MM-DD,
                          7d, 1w, yesterday, today)
  
  tag filtering:
    -l, --tag NAME        Filter by tag (repeatable, OR logic)
    --all-tags NAME       Require all specified tags (AND logic)
    --no-tag NAME         Exclude conversations with this tag (NOT logic)
  
  output:
    -n, --limit LIMIT     Max results (default: 10)
    -v, --verbose         Show full chunk text
    --full                Show complete prompt+response exchange
    --context N           Show ±N exchanges around match
    --thread              Narrative thread: top conversations expanded, rest as
                          shortlist
    --by-time             Sort results by time instead of score
    --json                Output as structured JSON
    --format NAME         Use named formatter (built-in or drop-in plugin)
  
  result modes:
    --conversations       Aggregate scores per conversation, return ranked
                          conversations
    --first               Return chronologically earliest match above threshold
    --refs [FILES]        Show file references; optionally filter by comma-
                          separated basenames
  
  search mode:
    --fts                 Force FTS5 keyword search (no embeddings)
    --semantic            Force semantic search (requires embeddings)
  
  search tuning:
    --embeddings-only     Skip FTS5 recall, use pure embeddings
    --recall N            FTS5 conversation recall limit (default: 80)
    --threshold SCORE     Filter results below this score (e.g., 0.7)
  
  diversity:
    --no-diversity        Disable MMR reranking for deterministic pure relevance
                          order
    --lambda FLOAT        MMR lambda: 1.0=relevance, 0.0=diversity (default:
                          0.7)
  
  recency:
    --recency             Boost recent results (exponential decay, mild 15%
                          boost)
    --recency-half-life DAYS
                          Days until recency boost decays to half (default: 30)
    --recency-max-boost MULT
                          Max boost multiplier for today's results (default:
                          1.15)
  
  scope:
    --no-exclude-active   Include results from active sessions (excluded by
                          default)
    --include-derivative  Include derivative conversations (siftd search/query
                          results)
  
  index management:
    --index               Build/update embeddings index
    --rebuild             Rebuild embeddings index from scratch
    --backend NAME        Embedding backend (ollama, fastembed)
    --embed-db PATH       Alternate embeddings database path
  
  Unified search: auto-selects the best available search mechanism.
  - With embeddings installed: hybrid search (FTS5 recall + semantic reranking)
  - Without embeddings: FTS5 keyword search (install embeddings: siftd install embed)
  
  examples:
    # search (auto-selects best available mode)
    siftd search "error handling"                        # hybrid or FTS5 (auto)
    siftd search -w myproject "auth flow"                # filter by workspace
    siftd search --since 2024-06 "testing"               # filter by date
  
    # explicit mode selection
    siftd search --fts "error handling"                  # force FTS5 keyword search
    siftd search --semantic "auth flow"                  # force semantic search
  
    # refine
    siftd search "design decision" --thread              # narrative: top conversations expanded
    siftd search "why we chose X" --context 2            # ±2 surrounding exchanges
    siftd search "event sourcing" --conversations        # rank whole conversations, not chunks
    siftd search "when first discussed Y" --first        # earliest match above threshold
    siftd search --threshold 0.7 "architecture"          # only high-relevance results
  
    # inspect
    siftd search -v "chunking"                           # full chunk text
    siftd search --full "chunking"                       # complete prompt+response exchange
    siftd search --refs "authelia"                       # file references + content
    siftd search --refs HANDOFF.md "setup"               # filter refs to specific file
  
    # filter by tags
    siftd search -l research:auth "auth flow"            # search within tagged conversations
    siftd search -l research: -l useful: "pattern"       # OR — any research: or useful: tag
    siftd search --all-tags important --all-tags reviewed "design"  # AND — must have both
    siftd search -l research: --no-tag archived "auth"   # combine OR + NOT
  
    # save useful results for future retrieval
    siftd tag 01HX... research:auth                   # bookmark a conversation
    siftd tag --last research:architecture            # tag most recent conversation
    siftd query -l research:auth                      # retrieve tagged conversations
  
    # tuning
    siftd search --embeddings-only "chunking"            # skip FTS5, pure embeddings
    siftd search --recall 200 "error"                    # widen FTS5 candidate pool
    siftd search --by-time "chunking"                     # sort by time instead of score
  
    # diversity vs relevance (MMR reranking)
    siftd search --no-diversity "chunking"               # pure relevance order (deterministic)
    siftd search --lambda 0.5 "design"                   # more diverse results (less redundancy)
    siftd search --json "auth" | jq '.results[0].breakdown'  # score component breakdown
  
  '''
# ---
# name: TestHelpSnapshots.test_subcommand_help[session-id]
  '''
  usage: siftd session-id [-h] [--workspace PATH]
  
  options:
    -h, --help            show this help message and exit
    --workspace, -w PATH  Workspace path (default: current directory)
  
  examples:
    siftd session-id                    # print session ID for current directory
    siftd session-id --workspace /path  # print session ID for specific workspace
  
  Exits with code 1 if no session ID found (for scripting).
  
  '''
# ---
# name: TestHelpSnapshots.test_subcommand_help[status]
  ''
# ---
# name: TestHelpSnapshots.test_subcommand_help[tag]
  '''
  usage: siftd tag [-h] [-n [N]] [-r] [--session ID] [--exchange INDEX]
                   [--prefix PREFIX] [--limit LIMIT] [--force] [-w SUBSTR]
                   [-m NAME] [--since DATE] [--before DATE] [-l NAME]
                   [--all-tags NAME] [--no-tag NAME]
                   [positional ...]
  
  Apply, remove, list, rename, or delete tags.
  
  positional arguments:
    positional            [entity_type] entity_id tag [tag2 ...] | list | rename
                          | delete
  
  options:
    -h, --help            show this help message and exit
    -n, --last [N]        Tag N most recent conversations (default: 1 if flag
                          used without N)
    -r, --remove          Remove tag instead of applying
    --session ID          Queue tag for a live session (applied at ingest)
    --exchange INDEX      Tag specific exchange (0-based, requires --session)
    --prefix PREFIX       Filter tag list by prefix (use with 'tag list')
    --limit LIMIT         Max conversations in drill-down (default: 10, use with
                          'tag list <name>')
    --force               Force delete even if tag has associations (use with
                          'tag delete')
  
  filtering:
    -w, --workspace SUBSTR
                          Filter by workspace path substring
    -m, --model NAME      Filter by model name
    --since DATE          Conversations started after this date (YYYY-MM-DD, 7d,
                          1w, yesterday, today)
    --before DATE         Conversations started before this date (YYYY-MM-DD,
                          7d, 1w, yesterday, today)
  
  tag filtering:
    -l, --tag NAME        Filter by tag (repeatable, OR logic)
    --all-tags NAME       Require all specified tags (AND logic)
    --no-tag NAME         Exclude conversations with this tag (NOT logic)
  
  examples:
    siftd tag 01HX... important              # tag conversation (default)
    siftd tag 01HX... important review       # apply multiple tags at once
    siftd tag --last important               # tag most recent conversation
    siftd tag --last important review        # multiple tags on most recent
    siftd tag --last 3 review                # tag 3 most recent conversations
    siftd tag workspace 01HY... proj         # explicit entity type
    siftd tag tool_call 01HZ... slow         # tag a tool call
    siftd tag --remove 01HX... important     # remove tag from conversation
    siftd tag --remove --last 1 important    # remove from most recent
    siftd tag -r workspace 01HY... proj      # remove from workspace
  
  subcommands:
    siftd tag list                            # list all tags
    siftd tag list --prefix research:         # filter by prefix
    siftd tag list research:auth              # show conversations with tag
    siftd tag rename old-name new-name        # rename a tag
    siftd tag delete old-tag                  # delete (refuses if applied)
    siftd tag delete old-tag --force          # delete with associations
  
  live session tagging:
    siftd tag --session abc123 decision:auth       # queue tag for session
    siftd tag --session abc123 --exchange 5 key    # queue tag for exchange 5
  
  '''
# ---
# name: TestHelpSnapshots.test_subcommand_help[tags]
  '''
  usage: siftd tags [-h] [-w SUBSTR] [-m NAME] [--since DATE] [--before DATE]
                    [-l NAME] [--all-tags NAME] [--no-tag NAME]
  
  options:
    -h, --help            show this help message and exit
  
  filtering:
    -w, --workspace SUBSTR
                          Filter by workspace path substring
    -m, --model NAME      Filter by model name
    --since DATE          Conversations started after this date (YYYY-MM-DD, 7d,
                          1w, yesterday, today)
    --before DATE         Conversations started before this date (YYYY-MM-DD,
                          7d, 1w, yesterday, today)
  
  tag filtering:
    -l, --tag NAME        Filter by tag (repeatable, OR logic)
    --all-tags NAME       Require all specified tags (AND logic)
    --no-tag NAME         Exclude conversations with this tag (NOT logic)
  
  '''
# ---
# name: TestHelpSnapshots.test_subcommand_help[tools]
  '''
  usage: siftd tools [-h] [--by-workspace] [--prefix PREFIX] [-n LIMIT] [--json]
  
  options:
    -h, --help         show this help message and exit
    --by-workspace     Show breakdown by workspace
    --prefix PREFIX    Tag prefix to filter (default: shell:)
    -n, --limit LIMIT  Max workspaces for --by-workspace (default: 20)
    --json             Output as JSON
  
  examples:
    siftd tools                    # shell command categories summary
    siftd tools --by-workspace     # breakdown by workspace
    siftd tools --prefix shell:    # filter by tag prefix
  
  '''
# ---
# name: TestHelpSnapshots.test_subcommand_help[workspaces]
  ''
# ---
